lhe/problem_iter1_response6.txt_stdout.txt
[*] Running ...
There are 3698944 (3.70 million) parameters in this neural network
>> Checkpoint (Epoch: 5000) Loaded!
999999999999999999999999999
10
Traceback (most recent call last):
  File "/root/reevo-main/problems/mvmoe_pomo/models/MOEModel_Light.py", line 56, in getheuristics
    from OVRP.gpt import heuristics_v2 as heuristics
  File "/root/reevo-main/problems/mvmoe_pomo/OVRP/gpt.py", line 21
    torch диагонаl = torch.arange(distance_matrix.size(0)).repeat(distance_matrix.size(0), 1)
          ^^^^^^^^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/root/reevo-main/problems/mvmoe_pomo/eval_train.py", line 172, in <module>
    avg_obj = main()
              ^^^^^^
  File "/root/reevo-main/problems/mvmoe_pomo/eval_train.py", line 132, in main
    score_AM, aug_score_AM  = tester.run()
                              ^^^^^^^^^^^^
  File "/root/reevo-main/problems/mvmoe_pomo/Tester_train.py", line 79, in run
    score, aug_score, all_score, all_aug_score = self._test_one_batch(data)
                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/reevo-main/problems/mvmoe_pomo/Tester_train.py", line 137, in _test_one_batch
    self.model.pre_forward(reset_state)
  File "/root/reevo-main/problems/mvmoe_pomo/models/MOEModel_Light.py", line 132, in pre_forward
    heuristics=self.getheuristics()
               ^^^^^^^^^^^^^^^^^^^^
  File "/root/reevo-main/problems/mvmoe_pomo/models/MOEModel_Light.py", line 58, in getheuristics
    from OVRP.gpt import heuristics
  File "/root/reevo-main/problems/mvmoe_pomo/OVRP/gpt.py", line 21
    torch диагонаl = torch.arange(distance_matrix.size(0)).repeat(distance_matrix.size(0), 1)
          ^^^^^^^^
SyntaxError: invalid syntax
